fixing - layout break

--- a/app/assets/stylesheets/2019/welcome.css.scss
+++ b/app/assets/stylesheets/2019/welcome.css.scss
@@ -529,7 +529,7 @@ body#acc2019 {
     }
    
     #landing-img {
-      padding: 130px 50px;
+      padding: 70px 50px;
     }
     
     button {
